# netcdf_test

./: CMakeLists.txt  LICENSE  README.md  simple_xy_wr.cpp
src/: simple_xy_rd.cpp
